# xis-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: sync.yml
database/: schema.sql
src/xis/: __init__.py  _config.py  _utils.py  cli.py
src/xis/db/: __init__.py  client.py
src/xis/inflow/: __init__.py  _client.py  _schemas.py  fetchers.py  sync.py
src/xis/xero/: __init__.py  _client.py  sync.py
